<resources>
    <string name="app_name">create-account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_access">sign in to access your account</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="next">Next</string>
    <string name="new_member">New Member? </string>
    <string name="register_now">Register now</string>
    <string name="get_started">Get Started</string>
    <string name="create_account_subtitle">by creating a free account.</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_valid_email">Valid email</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_strong_password">Strong Password</string>
    <string name="checking_box">By checking the box you agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="conditions">Conditions</string>
    <string name="already_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_a">Fragment A</string>
    <string name="switch_btn">switch</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="food">Food</string>
</resources>
