<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="-8dp"
        android:layout_marginStart="110dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="38sp"
        android:textColor="@color/black"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_subtitle"
        android:textSize="15sp"
        android:textColor="#808080"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="-5dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:hint="@string/hint_full_name"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="#EEEEEE"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInText"
        android:layout_marginTop="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:hint="@string/hint_valid_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="#EEEEEE"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <EditText
        android:id="@+id/numberInput"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:hint="@string/hint_phone"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="#EEEEEE"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <EditText
        android:id="@+id/strongPasswordInput"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:hint="@string/hint_strong_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="#EEEEEE"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberInput"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/strongPasswordInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="24dp">

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checking_box"
            android:textSize="12sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="12sp"
            android:textColor="#6C63FF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/andTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textSize="12sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/conditionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textSize="12sp"
            android:textColor="#6C63FF"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="363dp"
        android:layout_height="57dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#6C63FF"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/memberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="-50dp"
        android:text="@string/already_member"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextButton" />

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="-125dp"
        android:text="@string/log_in"
        android:textColor="#6C63FF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/memberTextView"
        app:layout_constraintTop_toBottomOf="@+id/nextButton" />

</androidx.constraintlayout.widget.ConstraintLayout>